# Cryptographic-Computing-Project

./: .gitignore  CMakeLists.txt  atomicops.h  circuit.cpp  circuit.h  main.cpp  party.cpp  party.h  readerwriterqueue.h  subprotocols.h
